[metadata]
name = yorktown
author = Jonathan Kelley
author-email = jkelley@boomtownroi.com
maintainer = Technical Operations
maintainer-email = techops@boomtownroi.com
home-page = https://github.com/boomtownroi/yorktown
summary = A tool to improve deployments
license = FreeBSD
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Intended Audience :: Developers
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Topic :: Utilities
requires-dist =
    docopt
keywords =
    deployment
    tool
    awesome
[files]
packages =
    yorktown
[entry_points]
console_scripts =
     yorktown = yorktown.cli:main
