[metadata]
name = yorktown
author = Jonathan Kelley
author-email = jonkelley@gmail.com
maintainer = Technical Operations
maintainer-email = jonkelley@gmail.com
home-page = https://github.com/jondkelley/yorktown
summary = A tool to improve deployments
license = FreeBSD
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Intended Audience :: Developers
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 2.7
        Topic :: Utilities
requires-dist =
    docopt
keywords =
    deployment
    tool
    awesome
[files]
packages =
    yorktown
    python-jenkins
[entry_points]
console_scripts =
     yorktown = yorktown.cli:main
